# duckdb_pipe

./: .gitignore  README.md  main.py  pyproject.toml
src/duckdb_pipe/: __init__.py
src/duckdb_pipe/pipe/: write_db.py
